--- a/index.html
+++ b/index.html
@@ -3,45 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charity Water Landing Page</title>
+    <title>Charity Water</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Hero Section: This is the main banner at the top of the page -->
-    <section class="hero">
-        <!-- Main headline -->
-        <h1>Clean Water for Everyone</h1>
-        <!-- Subheadline -->
-        <p>Join us in bringing safe, clean water to communities in need.</p>
-    </section>
+    <div class="container">
+        <!-- Header Logo -->
+        <header class="header">
+            <img src="https://via.placeholder.com/150x40?text=charity:+water" alt="Charity Water Logo" class="logo">
+        </header>
 
-    <!-- Story Section: This tells the story of the nonprofit -->
-    <section class="story">
-        <h2>Our Story</h2>
-        <p>
-         
-    </section>
+        <!-- Main Section -->
+        <main class="hero">
+            <div class="hero-text">
+                <h1>See where every<br>drop goes</h1>
+                <p>You give. We show you how it changes lives every step of the way.</p>
+                <div class="cta">
+                    <button class="start-btn">Start being the change</button>
+                    <button class="donate-btn">DONATE</button>
+                </div>
+            </div>
 
-    <!-- Real-World Impact Story Section -->
-    <section class="impact-story">
-        <!-- Section headline -->
-        <h2>Real Impact: Meet Amina</h2>
-        <!-- Container for image and text -->
-        <div class="impact-content">
-            <!-- Impact image -->
-            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Amina smiling with clean water" class="impact-image">
-            <!-- Impact story text -->
-            <p>
-                Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
-            </p>
-        </div>
-    </section>
-
-    <!-- Call-to-Action Section: This encourages visitors to take action -->
-    <section class="call-to-action">
-        <h2>Make a Difference</h2>
-        <p>Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
-        <a href="#" class="donate-button">Donate Now</a>
-    </section>
+            <!-- Hero Image -->
+            <div class="hero-image">
+                <img src="https://via.placeholder.com/250x350?text=Water+Pump" alt="Water Image">
+            </div>
+        </main>
+    </div>
 </body>
 </html>
