--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="container">
         <!-- Header Logo -->
         <header class="header">
-            <img src="https://via.placeholder.com/150x40?text=charity:+water" alt="Charity Water Logo" class="logo">
+            <!-- Logo image at the top left -->
+            <img src="img/charitywater_logo_horizontal_BlackText.png" alt="Charity Water Logo" class="logo">
         </header>
 
         <!-- Main Section -->
@@ -26,7 +27,8 @@
 
             <!-- Hero Image -->
             <div class="hero-image">
-                <img src="https://via.placeholder.com/250x350?text=Water+Pump" alt="Water Image">
+                <!-- Water Pump image on the right side -->
+                <img src="img/26804729-2.png" alt="Water Pump" />
             </div>
         </main>
     </div>
