--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charity Water</title>
     <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+</head>  <body>
+    <!-- White strip at the top with logo -->
+    <div class="top-strip">
+        <!-- Logo image in the white strip -->
+        <img src="img/cw_logo-2.png" alt="Charity Water Logo" class="logo">
+    </div>
+    
     <div class="container">
         <!-- Header Logo -->
         <header class="header">
-            <!-- Logo image at the top left -->
-            <img src="img/charitywater_logo_horizontal_BlackText.png" alt="Charity Water Logo" class="logo">
         </header>
 
         <!-- Main Section -->
@@ -21,16 +24,20 @@
                 <p>You give. We show you how it changes lives every step of the way.</p>
                 <div class="cta">
                     <button class="start-btn">Start being the change</button>
-                    <button class="donate-btn">DONATE</button>
+                    <!-- Changed from button to link for navigation -->
+                    <a href="donate.html" class="donate-btn">DONATE</a>
                 </div>
             </div>
 
             <!-- Hero Image -->
             <div class="hero-image">
-                <!-- Water Pump image on the right side -->
-                <img src="img/26804729-2.png" alt="Water Pump" />
+                <!-- Image showing people with clean water -->
+                <img src="https://cdn2.dropmarkusercontent.com/52043/6087500597f0de1664dbbf974175ac7dd78e2e9f8d4df584ec6d8ea3e1572552/preview/4661_Ethiopia_2019_CG-.jpg?Expires=1751834863&Signature=QWh~tLKz7KgCzRUxTaFzhgfEVXbkpEwRIP7MouQq6mLRtnfEHCmPs4FZOWXoax1ENcS8BMBijojGv2gpyVS4GCbR8WEj7c5zv5IMhURSzvJyzrZj0hXBnfFb51vK5YZ78Efy6AoPhfGSw3a9TWNSDmrGWeKiMw3xHSIjBiFEiMZA~~EaHl7wHe8ZLmrKYrX2beZtqJs~af5GLUX6B5IYgg5mSdxLKy-Vmg9yqCvAyD0iEjcHsGZ0c9wrctnIOtadQwzu1VjvUixlpTBIoWoYlHCYwaY5DK77WQLzCT9oIRolX9Izjv-2nR0GrxbQkiLy-N8w-MT2jeeAo0gr0jiTMQ__&Key-Pair-Id=APKAITQYWVEN757ZA4KQ" alt="People celebrating clean water access" />
             </div>
         </main>
     </div>
+    
+    <!-- White strip at the bottom -->
+    <div class="bottom-strip"></div>
 </body>
 </html>
