--- a/donate.html
+++ b/donate.html
@@ -31,7 +31,7 @@
             
             <!-- Image showing impact of donations - positioned bottom right -->
             <div style="margin: 30px 0; text-align: right;">
-                <img src="https://cdn2.dropmarkusercontent.com/52043/381a7139a1d684fa8c2323808fc11cd91b9a8bedeb058e9267440c693e1e9f11/preview/Madagascar_2019_CG-2679.jpg?Expires=1751836510&Signature=Z3dJlm94RI3c-lELTc~nTk7KwH4NZYbKOoqHsophsdkmTSocAoJ9iWNSU8YI59u4rHsO34ZzVtOKtPEXGFBObsnfU5aeFGRB0v0fNqoKc2t5rKLgWl2IDpmPfcUA3zImOeHYD4YUELT3z0HEA9vg-AeNiRh4Bp2jg868WNWY4M0aVk3syctFF4Nq-Oj7NubXgHXQUys6GgwBXv7x~KkI3Ehxv4UdUu8Fxr8Qpm1DClNpW0oXXnWB~tWv22hr3M3iNdtXsqe~FJ6rEht47rYhq-PvqLjHjuz3LzGd24Sc52pvr~RTRSs6zQ1Xr-bOYvESe5ROlotNAKrVBe~UWqKQFw__&Key-Pair-Id=APKAITQYWVEN757ZA4KQ" alt="People in Madagascar with access to clean water" style="max-width: 500px; height: auto; border-radius: 8px;">
+                <img src="img/water-can-transparent.png" alt="Water can representing clean water impact" style="max-width: 500px; height: auto; border-radius: 8px;">
             </div>
             
             <a href="index.html" style="color: #FFD43B;">&larr; Back to Home</a>
