--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
             <!-- Hero Image -->
             <div class="hero-image">
-                <!-- Image showing people with clean water -->
-                <img src="https://cdn2.dropmarkusercontent.com/52043/6087500597f0de1664dbbf974175ac7dd78e2e9f8d4df584ec6d8ea3e1572552/preview/4661_Ethiopia_2019_CG-.jpg?Expires=1751834863&Signature=QWh~tLKz7KgCzRUxTaFzhgfEVXbkpEwRIP7MouQq6mLRtnfEHCmPs4FZOWXoax1ENcS8BMBijojGv2gpyVS4GCbR8WEj7c5zv5IMhURSzvJyzrZj0hXBnfFb51vK5YZ78Efy6AoPhfGSw3a9TWNSDmrGWeKiMw3xHSIjBiFEiMZA~~EaHl7wHe8ZLmrKYrX2beZtqJs~af5GLUX6B5IYgg5mSdxLKy-Vmg9yqCvAyD0iEjcHsGZ0c9wrctnIOtadQwzu1VjvUixlpTBIoWoYlHCYwaY5DK77WQLzCT9oIRolX9Izjv-2nR0GrxbQkiLy-N8w-MT2jeeAo0gr0jiTMQ__&Key-Pair-Id=APKAITQYWVEN757ZA4KQ" alt="People celebrating clean water access" />
+                <!-- Water pump image showing clean water -->
+                <img src="img/4661_Ethiopia_2019_CG--2.jpg" alt="Clean water flowing from pump" />
             </div>
         </main>
     </div>
